test/type-error-5.err.expect
test/type-error-5.ktn:5:1: error: expected scalar type int but got [t1]
test/type-error-5.ktn:3:20: note: [t1] (output of myAddVector) is from here
test/type-error-5.ktn:5:12: note: int (from bar) is from here

test/type-error-5.ktn:5:1: error: expected stack type s2... int but got s1... [t1]

test/type-error-5.ktn:5:1: error: expected scalar type (s2... [t2] [char] -> s2... int) but got (s1... [t1] t1 -> s1... [t1])
test/type-error-5.ktn:5:34: note: (s1... [t1] t1 -> s1... [t1]) is from here
test/type-error-5.ktn:3:20: note: [t1] (input to myAddVector) is from here
test/type-error-5.ktn:6:12: note: t1 (type of x) is from here
test/type-error-5.ktn:5:12: note: (s2... [t2] [char] -> s2... int) is from here
test/type-error-5.ktn:5:12: note: [t2] (input to bar) is from here
test/type-error-5.ktn:5:12: note: [char] (input to bar) is from here
